// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fragment/Footer/ActionForm will overide local data when in update mode 1`] = `
Object {
  "form": Object {
    "description": <p>Type your description here</p>,
    "hero": "/7343bxx==",
    "is_active": "1",
    "ldp_id": "123456",
    "logo": "/9xbg6dsds==",
    "position": "1",
    "site": "https://google.com",
    "tagline": "tagline",
  },
}
`;

exports[`fragment/Footer/ActionForm will post data on failed and bring up an alert 1`] = `
<body>
  
  
  <div
    id="app"
  >
    
  
    <div
      <=""
      div=""
      id="plugin__12e5"
    >
      

    </div>
  </div>
  <div
    class="ss-notification-root"
    data-v-app=""
    role="alert"
  >
    
    <div
      class="ss-notification ss-notification--success slide-top-enter-from slide-top-enter-active"
    >
      <div
        class="ss-notification--icon"
      >
        <svg
          class=""
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        class="ss-notification--wrapper"
      >
        <!--v-if-->
        <!--v-if-->
        <div
          class="ss-notification--content"
        >
          <label />
        </div>
      </div>
    </div>
    
  </div>
</body>
`;

exports[`fragment/Footer/ActionForm will post data on success and bring up an alert then redirect it to the list 1`] = `
<body>
  
  
  <div
    id="app"
  >
    
  
    <div
      <=""
      div=""
      id="plugin__12e5"
    >
      

    </div>
  </div>
  <div
    class="ss-notification-root"
    data-v-app=""
    role="alert"
  >
    
    <div
      class="ss-notification ss-notification--success slide-top-enter-from slide-top-enter-active"
    >
      <div
        class="ss-notification--icon"
      >
        <svg
          class=""
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        class="ss-notification--wrapper"
      >
        <!--v-if-->
        <!--v-if-->
        <div
          class="ss-notification--content"
        >
          <label />
        </div>
      </div>
    </div>
    
  </div>
</body>
`;

exports[`fragment/Footer/ActionForm will render and match snapshot 1`] = `
<form
  class="ss-form"
>
  
  <div
    class="ss-form-control"
  >
    <div
      class="ss-form-control--label"
    >
      Name
    </div>
    <div
      class="ss-form-control--wrapper"
    >
      <div
        autofocus=""
        class="ss-control--input"
      >
        <!--v-if-->
        <input
          autocomplete="off"
          autofocus=""
          class="ss-input"
          placeholder="Footer name"
          type="text"
        />
        <!--v-if-->
        <!--v-if-->
      </div>
      <!---->
    </div>
  </div>
  <div
    class="ss-form-control"
  >
    <div
      class="ss-form-control--label"
    >
      Position
    </div>
    <div
      class="ss-form-control--wrapper col-3"
    >
      <div
        class="ss-control--input"
      >
        <div
          class="ss-select"
        >
          <div
            class="ss-select--button"
            tabindex="0"
          >
            <span
              class="button-label"
            >
              Please select position
            </span>
            <span
              class="button-icon"
            >
              <svg
                class="h-4"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 256C8 119 119 8 256 8s248 111 248 248-111 248-248 248S8 393 8 256zm231-113.9L103.5 277.6c-9.4 9.4-9.4 24.6 0 33.9l17 17c9.4 9.4 24.6 9.4 33.9 0L256 226.9l101.6 101.6c9.4 9.4 24.6 9.4 33.9 0l17-17c9.4-9.4 9.4-24.6 0-33.9L273 142.1c-9.4-9.4-24.6-9.4-34 0z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </div>
          <div
            class="ss-select--dropdown slide-top-enter-from slide-top-enter-active"
            style="display: none;"
          >
            <ul
              class="dropdown-list"
            >
              
              <li
                class="dropdown-item"
              >
                Position Top
              </li>
              <li
                class="dropdown-item"
              >
                Position Right
              </li>
              <li
                class="dropdown-item"
              >
                Position Bottom
              </li>
              <li
                class="dropdown-item"
              >
                Position Left
              </li>
              <li
                class="dropdown-item"
              >
                Position Front
              </li>
              
            </ul>
          </div>
        </div>
      </div>
      <!---->
    </div>
  </div>
  <div
    class="ss-form-control"
  >
    <!---->
    <div
      class="ss-form-control--wrapper col-offset-3"
    >
      <button
        class="ss-button ss-button--orange ss-button--base text-bold"
        type="submit"
      >
        <div
          class="ss-button--wrapper"
        >
          
          <div
            class="ss-button--icon"
          >
            <svg
              class=""
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M433.941 129.941l-83.882-83.882A48 48 0 0 0 316.118 32H48C21.49 32 0 53.49 0 80v352c0 26.51 21.49 48 48 48h352c26.51 0 48-21.49 48-48V163.882a48 48 0 0 0-14.059-33.941zM224 416c-35.346 0-64-28.654-64-64 0-35.346 28.654-64 64-64s64 28.654 64 64c0 35.346-28.654 64-64 64zm96-304.52V212c0 6.627-5.373 12-12 12H76c-6.627 0-12-5.373-12-12V108c0-6.627 5.373-12 12-12h228.52c3.183 0 6.235 1.264 8.485 3.515l3.48 3.48A11.996 11.996 0 0 1 320 111.48z"
                fill="currentColor"
              />
            </svg>
          </div>
          
          
          <div
            class="ss-button--label has-icon"
          >
            
            Create
            
          </div>
          
        </div>
      </button>
      <!---->
    </div>
  </div>
  
</form>
`;

exports[`fragment/Footer/ActionForm will render the spinner during the request process 1`] = `
<form
  class="ss-form"
>
  
  <div
    class="ss-form-control"
  >
    <div
      class="ss-form-control--label"
    >
      Name
    </div>
    <div
      class="ss-form-control--wrapper"
    >
      <div
        autofocus=""
        class="ss-control--input"
      >
        <!--v-if-->
        <input
          autocomplete="off"
          autofocus=""
          class="ss-input"
          placeholder="Footer name"
          type="text"
        />
        <!--v-if-->
        <!--v-if-->
      </div>
      <!---->
    </div>
  </div>
  <div
    class="ss-form-control"
  >
    <div
      class="ss-form-control--label"
    >
      Position
    </div>
    <div
      class="ss-form-control--wrapper col-3"
    >
      <div
        class="ss-control--input"
      >
        <div
          class="ss-select"
        >
          <div
            class="ss-select--button"
            tabindex="0"
          >
            <span
              class="button-label"
            >
              Please select position
            </span>
            <span
              class="button-icon"
            >
              <svg
                class="h-4"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 256C8 119 119 8 256 8s248 111 248 248-111 248-248 248S8 393 8 256zm231-113.9L103.5 277.6c-9.4 9.4-9.4 24.6 0 33.9l17 17c9.4 9.4 24.6 9.4 33.9 0L256 226.9l101.6 101.6c9.4 9.4 24.6 9.4 33.9 0l17-17c9.4-9.4 9.4-24.6 0-33.9L273 142.1c-9.4-9.4-24.6-9.4-34 0z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </div>
          <div
            class="ss-select--dropdown slide-top-enter-from slide-top-enter-active"
            style="display: none;"
          >
            <ul
              class="dropdown-list"
            >
              
              <li
                class="dropdown-item"
              >
                Position Top
              </li>
              <li
                class="dropdown-item"
              >
                Position Right
              </li>
              <li
                class="dropdown-item"
              >
                Position Bottom
              </li>
              <li
                class="dropdown-item"
              >
                Position Left
              </li>
              <li
                class="dropdown-item"
              >
                Position Front
              </li>
              
            </ul>
          </div>
        </div>
      </div>
      <!---->
    </div>
  </div>
  <div
    class="ss-form-control"
  >
    <!---->
    <div
      class="ss-form-control--wrapper col-offset-3"
    >
      <button
        class="ss-button ss-button--orange ss-button--base text-bold"
        disabled=""
        type="submit"
      >
        <div
          class="ss-button--wrapper"
        >
          
          <!--v-if-->
          
          
          <div
            class="ss-button--spinner"
          >
            <div
              class="ss-spinner"
              style="width: 20px; height: 20px;"
            >
              <div />
              <div />
              <div />
            </div>
          </div>
          
        </div>
      </button>
      <!---->
    </div>
  </div>
  
</form>
`;

exports[`fragment/Footer/ActionForm will render the text and color for the form update 1`] = `
<form
  class="ss-form"
>
  
  <div
    class="ss-form-control"
  >
    <div
      class="ss-form-control--label"
    >
      Name
    </div>
    <div
      class="ss-form-control--wrapper"
    >
      <div
        autofocus=""
        class="ss-control--input"
      >
        <!--v-if-->
        <input
          autocomplete="off"
          autofocus=""
          class="ss-input"
          placeholder="Footer name"
          type="text"
        />
        <!--v-if-->
        <!--v-if-->
      </div>
      <!---->
    </div>
  </div>
  <div
    class="ss-form-control"
  >
    <div
      class="ss-form-control--label"
    >
      Position
    </div>
    <div
      class="ss-form-control--wrapper col-3"
    >
      <div
        class="ss-control--input"
      >
        <div
          class="ss-select"
        >
          <div
            class="ss-select--button"
            tabindex="0"
          >
            <span
              class="button-label"
            >
              Please select position
            </span>
            <span
              class="button-icon"
            >
              <svg
                class="h-4"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 256C8 119 119 8 256 8s248 111 248 248-111 248-248 248S8 393 8 256zm231-113.9L103.5 277.6c-9.4 9.4-9.4 24.6 0 33.9l17 17c9.4 9.4 24.6 9.4 33.9 0L256 226.9l101.6 101.6c9.4 9.4 24.6 9.4 33.9 0l17-17c9.4-9.4 9.4-24.6 0-33.9L273 142.1c-9.4-9.4-24.6-9.4-34 0z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </div>
          <div
            class="ss-select--dropdown slide-top-enter-from slide-top-enter-active"
            style="display: none;"
          >
            <ul
              class="dropdown-list"
            >
              
              <li
                class="dropdown-item"
              >
                Position Top
              </li>
              <li
                class="dropdown-item"
              >
                Position Right
              </li>
              <li
                class="dropdown-item"
              >
                Position Bottom
              </li>
              <li
                class="dropdown-item"
              >
                Position Left
              </li>
              <li
                class="dropdown-item"
              >
                Position Front
              </li>
              
            </ul>
          </div>
        </div>
      </div>
      <!---->
    </div>
  </div>
  <div
    class="ss-form-control"
  >
    <!---->
    <div
      class="ss-form-control--wrapper col-offset-3"
    >
      <button
        class="ss-button ss-button--orange ss-button--base text-bold"
        type="submit"
      >
        <div
          class="ss-button--wrapper"
        >
          
          <div
            class="ss-button--icon"
          >
            <svg
              class=""
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M433.941 129.941l-83.882-83.882A48 48 0 0 0 316.118 32H48C21.49 32 0 53.49 0 80v352c0 26.51 21.49 48 48 48h352c26.51 0 48-21.49 48-48V163.882a48 48 0 0 0-14.059-33.941zM224 416c-35.346 0-64-28.654-64-64 0-35.346 28.654-64 64-64s64 28.654 64 64c0 35.346-28.654 64-64 64zm96-304.52V212c0 6.627-5.373 12-12 12H76c-6.627 0-12-5.373-12-12V108c0-6.627 5.373-12 12-12h228.52c3.183 0 6.235 1.264 8.485 3.515l3.48 3.48A11.996 11.996 0 0 1 320 111.48z"
                fill="currentColor"
              />
            </svg>
          </div>
          
          
          <div
            class="ss-button--label has-icon"
          >
            
            Update
            
          </div>
          
        </div>
      </button>
      <!---->
    </div>
  </div>
  
</form>
`;

exports[`fragment/Footer/ActionForm will render with error validation on all fields and match snapshot 1`] = `
<form
  class="ss-form"
>
  
  <div
    class="ss-form-control has-feedback"
  >
    <div
      class="ss-form-control--label"
    >
      Name
    </div>
    <div
      class="ss-form-control--wrapper"
    >
      <div
        autofocus=""
        class="ss-control--input"
      >
        <!--v-if-->
        <input
          autocomplete="off"
          autofocus=""
          class="ss-input"
          placeholder="Footer name"
          type="text"
        />
        <!--v-if-->
        <!--v-if-->
      </div>
      <div
        class="ss-control--info slide-top-enter-from slide-top-enter-active"
      >
        Footer name is required
      </div>
    </div>
  </div>
  <div
    class="ss-form-control has-feedback"
  >
    <div
      class="ss-form-control--label"
    >
      Position
    </div>
    <div
      class="ss-form-control--wrapper col-3"
    >
      <div
        class="ss-control--input"
      >
        <div
          class="ss-select"
        >
          <div
            class="ss-select--button"
            tabindex="0"
          >
            <span
              class="button-label"
            >
              Please select position
            </span>
            <span
              class="button-icon"
            >
              <svg
                class="h-4"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 256C8 119 119 8 256 8s248 111 248 248-111 248-248 248S8 393 8 256zm231-113.9L103.5 277.6c-9.4 9.4-9.4 24.6 0 33.9l17 17c9.4 9.4 24.6 9.4 33.9 0L256 226.9l101.6 101.6c9.4 9.4 24.6 9.4 33.9 0l17-17c9.4-9.4 9.4-24.6 0-33.9L273 142.1c-9.4-9.4-24.6-9.4-34 0z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </div>
          <div
            class="ss-select--dropdown slide-top-enter-from slide-top-enter-active"
            style="display: none;"
          >
            <ul
              class="dropdown-list"
            >
              
              <li
                class="dropdown-item"
              >
                Position Top
              </li>
              <li
                class="dropdown-item"
              >
                Position Right
              </li>
              <li
                class="dropdown-item"
              >
                Position Bottom
              </li>
              <li
                class="dropdown-item"
              >
                Position Left
              </li>
              <li
                class="dropdown-item"
              >
                Position Front
              </li>
              
            </ul>
          </div>
        </div>
      </div>
      <div
        class="ss-control--info slide-top-enter-from slide-top-enter-active"
      >
        Position is required
      </div>
    </div>
  </div>
  <div
    class="ss-form-control"
  >
    <!---->
    <div
      class="ss-form-control--wrapper col-offset-3"
    >
      <button
        class="ss-button ss-button--orange ss-button--base text-bold"
        type="submit"
      >
        <div
          class="ss-button--wrapper"
        >
          
          <div
            class="ss-button--icon"
          >
            <svg
              class=""
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M433.941 129.941l-83.882-83.882A48 48 0 0 0 316.118 32H48C21.49 32 0 53.49 0 80v352c0 26.51 21.49 48 48 48h352c26.51 0 48-21.49 48-48V163.882a48 48 0 0 0-14.059-33.941zM224 416c-35.346 0-64-28.654-64-64 0-35.346 28.654-64 64-64s64 28.654 64 64c0 35.346-28.654 64-64 64zm96-304.52V212c0 6.627-5.373 12-12 12H76c-6.627 0-12-5.373-12-12V108c0-6.627 5.373-12 12-12h228.52c3.183 0 6.235 1.264 8.485 3.515l3.48 3.48A11.996 11.996 0 0 1 320 111.48z"
                fill="currentColor"
              />
            </svg>
          </div>
          
          
          <div
            class="ss-button--label has-icon"
          >
            
            Create
            
          </div>
          
        </div>
      </button>
      <!---->
    </div>
  </div>
  
</form>
`;
